--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,18 @@
 #root {
 	height: 100%;
 }
-
+/*
 div {
 	background-color: #e3f4f3;
 }
-
-h1, p {
+/*
+h1, h3, p {
 	color: teal;
+}
+*/
+h3 {
+	color: teal;
+	display: inline;
 }
 
 .container-fluid {
@@ -37,15 +42,19 @@ form {
 	vertical-align: middle;
 }
 
-.centered {
-	position: absolute;
-	margin-left: auto;
-	margin-right: auto;
-	left: 0;
-	right: 0;
-	top: 0;
+.nullpading {
+	padding: 0;
 }
 
+.centered {
+	text-align: center;
+}
+/*
+.transfInput {
+	width: 60px;
+	height: 20px;
+}
+*/
 .title {
 	text-align: center;
 	font-size: 30px;
