--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,18 +1,18 @@
 #root {
-	height: 100%;
+	height: 90%;
 }
-/*
-div {
-	background-color: #e3f4f3;
-}
-/*
-h1, h3, p {
-	color: teal;
-}
-*/
+
 h3 {
 	color: teal;
 	display: inline;
+}
+
+vertical-align {
+	text-align: center;
+}
+
+.centered {
+	text-align: center;
 }
 
 .container-fluid {
@@ -46,15 +46,6 @@ form {
 	padding: 0;
 }
 
-.centered {
-	text-align: center;
-}
-/*
-.transfInput {
-	width: 60px;
-	height: 20px;
-}
-*/
 .title {
 	text-align: center;
 	font-size: 30px;
